Migrate to PydanticAI for model-agnostic support
Major Changes:
- Replace direct Azure OpenAI client with PydanticAI Agent
- Support multiple providers: Azure OpenAI, OpenAI, Anthropic, etc.
- Remove detail parameter (not supported by PydanticAI)
- Allow image_paths to be single string or list for better UX
- Auto-detect GPT-5 models and use max_completion_tokens
- Update all documentation with migration guide

Breaking Changes:
- Model parameter now requires provider prefix (e.g., 'azure:gpt-5.2')
- Token usage nested under 'usage' object in response
- detail parameter removed (was unused with PydanticAI)

New Features:
- image_paths can be single string: 'image.jpg' instead of ['image.jpg']
- Automatic max_completion_tokens conversion for GPT-5
- Model-agnostic: switch providers without code changes

Documentation:
- Added PydanticAI migration guide
- Added Zed Editor setup guide
- Updated Quick Reference
- Updated README with multi-provider examples

Configuration:
- Added to Zed config: ~/.config/zed/settings.json
- Updated .env.example with provider-specific configs

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,15 @@
-# Azure OpenAI Configuration
+# Model Configuration
+# Format: "provider:model-name"
+# Examples:
+#   - azure:gpt-5.2 (Azure OpenAI)
+#   - azure:gpt-4o (Azure OpenAI)
+#   - openai:gpt-4o (OpenAI)
+#   - openai:gpt-4-turbo (OpenAI)
+#   - anthropic:claude-sonnet-4 (Anthropic)
+# Default: azure:gpt-5.2
+MODEL=azure:gpt-5.2
+
+# Azure OpenAI Configuration (only needed if using azure: models)
 # Get these values from your Azure Portal -> Azure OpenAI resource
 
 # Your Azure OpenAI endpoint URL
@@ -9,14 +20,17 @@ AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
 # Found in: Azure Portal -> Your OpenAI Resource -> Keys and Endpoint
 AZURE_OPENAI_API_KEY=your-api-key-here
 
-# Default model deployment name (optional)
-# This should match your deployment name in Azure, not the model name
-# Default: gpt-5.2
-AZURE_OPENAI_MODEL=gpt-5.2
-
 # Azure OpenAI API version (optional)
 # Default: 2024-12-01-preview
 AZURE_OPENAI_API_VERSION=2024-12-01-preview
+
+# OpenAI Configuration (only needed if using openai: models)
+# Get your API key from https://platform.openai.com/api-keys
+# OPENAI_API_KEY=your-openai-api-key-here
+
+# Anthropic Configuration (only needed if using anthropic: models)
+# Get your API key from https://console.anthropic.com/
+# ANTHROPIC_API_KEY=your-anthropic-api-key-here
 
 # Debug mode (optional)
 # Set to "true" to enable detailed error traces and logging
