--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "fastmcp>=0.5.0",
-    "openai>=1.0.0",
+    "pydantic-ai>=0.0.49",
     "python-dotenv>=1.0.0",
     "pillow>=10.0.0",
     "httpx>=0.27.0",
